--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -7,7 +7,7 @@
 <div class="wrapper">
   <img src="img/div.container.png"/>
   <div class="container">
-    <div class='task1  task'>
+    <div class='task1 task'>
     </div>
   </div>
 </div> 
@@ -16,7 +16,7 @@
 <div class="wrapper">
   <img src="img/div.container-1.png"/>
   <div class="container">
-    <div class='task2  task'>
+    <div class='task2 task'>
     </div>
   </div>
 </div> 
@@ -45,7 +45,7 @@
 <div class="wrapper">
   <img src="img/div.container-4.png"/>
   <div class="container">
-    <div class='task5  task'>
+    <div class='task5 task'>
     </div>
   </div>
 </div>
@@ -54,7 +54,7 @@
 <div class="wrapper">
   <img src="img/div.container-5.png"/>
   <div class="container">
-    <div class='task6  task'>
+    <div class='task6 task'>
     </div>
   </div>
 </div>
@@ -63,7 +63,7 @@
 <div class="wrapper">
   <img src="img/div.container-6.png"/>
   <div class="container">
-    <div class='task7  task'>
+    <div class='task7 task'>
     </div>
   </div>
 </div>
@@ -72,7 +72,7 @@
 <div class="wrapper">
   <img src="img/div.container-7.png"/>
   <div class="container">
-    <div class='task8  task'>
+    <div class='task8 task'>
     </div>
   </div>
 </div>
@@ -81,7 +81,7 @@
 <div class="wrapper">
   <img src="img/div.container-8.png"/>
   <div class="container">
-    <div class='task9  task'>
+    <div class='task9 task'>
     </div>
   </div>
 </div>
@@ -90,7 +90,7 @@
 <div class="wrapper">
   <img src="img/div.container-9.png"/>
   <div class="container">
-    <div class='task10  task'>
+    <div class='task10 task'>
     </div>
   </div>
 </div>
@@ -98,17 +98,17 @@
  {{> title header='Завдання 11' description='Встановіть елементу .task11 прокручення фонового зображення разом зі сторінкою'}} 
 <div class="wrapper">
   <img src="img/div.container-10.png"/>
-  <div class="container ">
-    <div class='task11  task'>
+  <div class="container">
+    <div class='task11 task'>
     </div>
   </div>
 </div>
 
- {{> title header='Завдання 12' description='Встановіть елементу .task12 нерухоме фонове зображення при прокрученні сторінки'}} 
+ {{> title header='Завдання 12' description='Встановіть елементу .task12 нерухоме фонове зображення при прокручуванні сторінки'}} 
 <div class="wrapper">
   <img src="img/div.container-11.png"/>
-  <div class="container  ">
-    <div class='task12  task'>
+  <div class="container">
+    <div class='task12 task'>
     </div>
   </div>
 </div>
@@ -116,8 +116,8 @@
  {{> title header='Завдання 13' description='Встановіть елементу .task13 прокручення фонового зображення разом з контентом'}} 
 <div class="wrapper">
   <img src="img/div.container-12.png"/>
-  <div class="container ">
-    <div class='task13  task'>
+  <div class="container">
+    <div class='task13 task'>
     </div>
   </div>
 </div>
@@ -125,8 +125,8 @@
  {{> title header='Завдання 14' description='Встановіть елементу .task14 фонове зображення по центру'}} 
 <div class="wrapper">
   <img src="img/div.container-13.png"/>
-  <div class="container ">
-    <div class='task14  task'>
+  <div class="container">
+    <div class='task14 task'>
     </div>
   </div>
 </div>
@@ -134,8 +134,8 @@
  {{> title header='Завдання 15' description='Встановіть елементу .task15 фонове зображення зверху'}} 
 <div class="wrapper">
   <img src="img/div.container-14.png"/>
-  <div class="container ">
-    <div class='task15  task'>
+  <div class="container">
+    <div class='task15 task'>
     </div>
   </div>
 </div>
@@ -143,8 +143,8 @@
  {{>  title header='Завдання 16' description='Встановіть елементу .task16 фонове зображення знизу'}} 
 <div class="wrapper">
   <img src="img/div.container-15.png"/>
-  <div class="container ">
-    <div class='task16  task'>
+  <div class="container">
+    <div class='task16 task'>
     </div>
   </div>
 </div>
@@ -152,8 +152,8 @@
  {{>  title header='Завдання 17' description='Встановіть елементу .task17 фонове зображення зліва'}} 
 <div class="wrapper">
   <img src="img/div.container-16.png"/>
-  <div class="container ">
-    <div class='task17  task'>
+  <div class="container">
+    <div class='task17 task'>
     </div>
   </div>
 </div>
@@ -161,8 +161,8 @@
  {{>  title header='Завдання 18' description='Встановіть елементу .task18 фонове зображення справу'}} 
 <div class="wrapper">
   <img src="img/div.container-17.png"/>
-  <div class="container ">
-    <div class='task18  task'>
+  <div class="container">
+    <div class='task18 task'>
     </div>
   </div>
 </div>
@@ -170,8 +170,8 @@
  {{>  title header='Завдання 19' description='Встановіть елементу .task19 фонове зображення в 100px від початку контейнеру'}} 
 <div class="wrapper">
   <img src="img/div.container-18.png"/>
-  <div class="container ">
-    <div class='task19  task'>
+  <div class="container">
+    <div class='task19 task'>
     </div>
   </div>
 </div>
@@ -179,8 +179,8 @@
  {{> title header='Завдання 20' description='Встановіть елементу .task20 автомтичний розмір фонового зображення'}} 
 <div class="wrapper">
   <img src="img/div.container-19.png"/>
-  <div class="container ">
-    <div class='task20  task'>
+  <div class="container">
+    <div class='task20 task'>
     </div>
   </div>
 </div>
@@ -188,8 +188,8 @@
  {{> title header='Завдання 21' description='Встановіть елементу .task21 розмір фонового зображення 600px'}} 
 <div class="wrapper">
   <img src="img/div.container-20.png"/>
-  <div class="container ">
-    <div class='task21  task'>
+  <div class="container">
+    <div class='task21 task'>
     </div>
   </div>
 </div>
@@ -197,8 +197,8 @@
  {{> title header='Завдання 22' description='Встановіть елементу .task22 розмір фонового зображення 50% відсотків від контейнера'}} 
 <div class="wrapper">
   <img src="img/div.container-21.png"/>
-  <div class="container ">
-    <div class='task22  task'>
+  <div class="container">
+    <div class='task22 task'>
     </div>
   </div>
 </div>
@@ -207,7 +207,7 @@
 <div class="wrapper">
   <img src="img/div.container-22.png"/>
   <div class="container">
-    <div class='task23  task'>
+    <div class='task23 task'>
     </div>
   </div>
 </div>
@@ -216,7 +216,7 @@
 <div class="wrapper">
   <img src="img/div.container-23.png"/>
   <div class="container">
-    <div class='task24  task'>
+    <div class='task24 task'>
     </div>
   </div>
 </div>
@@ -225,7 +225,7 @@
 <div class="wrapper">
   <img src="img/div.container-24.png"/>
   <div class="container">
-    <div class='task25  task'>
+    <div class='task25 task'>
     </div>
   </div>
 </div>
@@ -234,7 +234,7 @@
 <div class="wrapper">
   <img src="img/div.container-25.png"/>
   <div class="container">
-    <div class='task26  task'>
+    <div class='task26 task'>
     </div>
   </div>
 </div>
@@ -242,8 +242,8 @@
  {{>  title header='Завдання 27 (продвинуте необовязкове)' description='Для елементу .task27 відображуйте фон в межах контенту тексту (для коректної роботи властивості ії треба використовувати css префікс -webkit- )'}} 
 <div class="wrapper">
   <img src="img/div.container-27.png"/>
-  <div class="container ">
-    <div class='task27  task'>
+  <div class="container">
+    <div class='task27 task'>
       Lorem ipsum
     </div>
   </div>
@@ -253,7 +253,7 @@
  {{>  title header='Завдання 28 (продвинуте необовязкове)' description='Для елементу .task28 відображуйте фон в рамках обмежених зовнішнім полем елемента'}} 
 <div class="wrapper">
   <img src="img/div.container-28.png"/>
-  <div class="container ">
+  <div class="container">
     <div class='task28 task'>
       
     </div>
@@ -263,7 +263,7 @@
  {{>  title header='Завдання 29 (продвинуте необовязкове)' description='Для елементу .task29 відображуйте фон в рамках обмежених внутрішнім полем елемента'}} 
 <div class="wrapper">
   <img src="img/div.container-29.png"/>
-  <div class="container ">
+  <div class="container">
     <div class='task29 task'>
       
     </div>
@@ -273,7 +273,7 @@
  {{>  title header='Завдання 30 (продвинуте необовязкове)' description='Для елементу .task30 відображуйте фон починаючи з контенту'}} 
 <div class="wrapper">
   <img src="img/div.container-30.png"/>
-  <div class="container ">
+  <div class="container">
     <div class='task30 task'>
       Lorem ipsum
     </div>
@@ -287,7 +287,7 @@
  {{>  title header='Завдання 31 (продвинуте необовязкове)' description='Для елементу .task32 встановіть рамкою лінійний градієнт від синього до зеленого'}} 
 <div class="wrapper">
   <img src="img/div.container-32.png"/>
-  <div class="container ">
+  <div class="container">
     <div class='task31 task'>
       
     </div>
@@ -297,7 +297,7 @@
  {{>  title header='Завдання 32 (продвинуте необовязкове)' description='Для елементу .task32 встановіть рамкою зображення радіальний градієнт red 5%, green 15%, blue 60%'}} 
 <div class="wrapper">
   <img src="img/div.container-33.png"/>
-  <div class="container ">
+  <div class="container">
     <div class='task32 task'>
       
     </div>
